--- a/src/Makefile
+++ b/src/Makefile
@@ -66,6 +66,7 @@ OBJS = _Blob.o \
        _GravityType.o \
        _Image.o \
        _ImageType.o \
+       _InterlaceType.o \
        _Montage.o \
        _NoiseType.o \
        _PathArcAbs.o \
