--- a/src/Makefile
+++ b/src/Makefile
@@ -97,6 +97,7 @@ OBJS = _Blob.o \
        _PathSmoothQuadraticCurvetoRel.o \
        _Pixels.o \
        _QuantumOperator.o \
+       _QuantumType.o \
        _TypeMetric.o \
        _VPath.o \
        _main.o
