add cookbook test

--- a/test/Makefile
+++ b/test/Makefile
@@ -1,9 +1,24 @@
-all:
+all: cookbook blob color image geometry montage api
+
+cookbook:
+	python test_cookbook.py
+
+blob:
 	python test_pgmagick_blob.py
+
+color:
 	python test_pgmagick_color.py
+
+image:
 	python test_pgmagick_image.py
+
+geometry:
 	python test_pgmagick_geometry.py
+
+montage:
 	python test_pgmagick_montage.py
+
+api:
 	python test_pgmagick_api.py
 
 clean:
