--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: python
 
 python:
     - "2.7"
-    - "3.5"
+    - "3.2" # for ubuntu12.04
 
 before_install:
     - sudo apt-get install libboost-python-dev libgraphicsmagick++1-dev
