--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ python:
     - "3.2" # for ubuntu12.04
 
 before_install:
-    - sudo apt-get install libboost-python-dev libgraphicsmagick++1-dev
+    - sudo apt-get update && sudo apt-get install libboost-python-dev libgraphicsmagick++1-dev
 
 install:
     - pip install --upgrade .
