--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ python:
 before_install:
     - sudo apt-get update && sudo apt-get -y install libboost-python-dev libgraphicsmagick++1-dev
     - python -c "import sysconfig;print(sysconfig.get_config_vars())"
+    - /usr/bin/python -c "import sysconfig;print(sysconfig.get_config_vars())"
 
 install:
     # - pip install --upgrade .
