--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ before_install:
 
 install:
     # - pip install --upgrade .
-    - python setup.py install
+    - /usr/bin/python setup.py install
 
 script:
     - make test
