--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,14 @@ before_install:
 
 install:
     # - pip install --upgrade .
-    - /usr/bin/python setup.py install
+    - sudo /usr/bin/python setup.py install
 
 script:
-    - make test
+    # - make test
+	/usr/bin/python test_cookbook.py
+	/usr/bin/python test_pgmagick_blob.py
+	/usr/bin/python test_pgmagick_color.py
+	/usr/bin/python test_pgmagick_image.py
+	/usr/bin/python test_pgmagick_geometry.py
+	/usr/bin/python test_pgmagick_montage.py
+	/usr/bin/python test_pgmagick_api.py
