fix invalid yaml format

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,10 +18,10 @@ install:
 
 script:
     # - make test
-	/usr/bin/python test_cookbook.py
-	/usr/bin/python test_pgmagick_blob.py
-	/usr/bin/python test_pgmagick_color.py
-	/usr/bin/python test_pgmagick_image.py
-	/usr/bin/python test_pgmagick_geometry.py
-	/usr/bin/python test_pgmagick_montage.py
-	/usr/bin/python test_pgmagick_api.py
+    - /usr/bin/python test_cookbook.py
+	- /usr/bin/python test_pgmagick_blob.py
+	- /usr/bin/python test_pgmagick_color.py
+	- /usr/bin/python test_pgmagick_image.py
+	- /usr/bin/python test_pgmagick_geometry.py
+	- /usr/bin/python test_pgmagick_montage.py
+	- /usr/bin/python test_pgmagick_api.py
