fix invalid yaml format

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,10 +17,11 @@ install:
     - sudo /usr/bin/python setup.py install
 
 script:
-    - /usr/bin/python test_cookbook.py
-	- /usr/bin/python test_pgmagick_blob.py
-	- /usr/bin/python test_pgmagick_color.py
-	- /usr/bin/python test_pgmagick_image.py
-	- /usr/bin/python test_pgmagick_geometry.py
-	- /usr/bin/python test_pgmagick_montage.py
-	- /usr/bin/python test_pgmagick_api.py
+    - make test
+    # - /usr/bin/python test_cookbook.py
+	# - /usr/bin/python test_pgmagick_blob.py
+	# - /usr/bin/python test_pgmagick_color.py
+	# - /usr/bin/python test_pgmagick_image.py
+	# - /usr/bin/python test_pgmagick_geometry.py
+	# - /usr/bin/python test_pgmagick_montage.py
+	# - /usr/bin/python test_pgmagick_api.py
