--- a/.travis.yml
+++ b/.travis.yml
@@ -17,11 +17,10 @@ install:
     - sudo /usr/bin/python setup.py install
 
 script:
-    - make test
-    # - /usr/bin/python test_cookbook.py
-	# - /usr/bin/python test_pgmagick_blob.py
-	# - /usr/bin/python test_pgmagick_color.py
-	# - /usr/bin/python test_pgmagick_image.py
-	# - /usr/bin/python test_pgmagick_geometry.py
-	# - /usr/bin/python test_pgmagick_montage.py
-	# - /usr/bin/python test_pgmagick_api.py
+    - sudo /usr/bin/python test_cookbook.py
+	- sudo /usr/bin/python test_pgmagick_blob.py
+	- sudo /usr/bin/python test_pgmagick_color.py
+	- sudo /usr/bin/python test_pgmagick_image.py
+	- sudo /usr/bin/python test_pgmagick_geometry.py
+	- sudo /usr/bin/python test_pgmagick_montage.py
+	- sudo /usr/bin/python test_pgmagick_api.py
