--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,8 @@ python:
     - "3.2" # for ubuntu12.04
 
 before_install:
-    - sudo apt-get update && sudo apt-get -y install libboost-python-dev libgraphicsmagick++1-dev
+    - sudo apt-get update
+    - sudo apt-get -y install libboost-python-dev libgraphicsmagick++1-dev
     - python -c "import sysconfig;print(sysconfig.get_config_vars())"
     - /usr/bin/python -c "import sysconfig;print(sysconfig.get_config_vars())"
 
@@ -16,6 +17,11 @@ install:
     # - pip install --upgrade .
     - sudo /usr/bin/python setup.py install
     - /usr/bin/python test/test_cookbook.py
-
-script:
-    - make test
+    - /usr/bin/python test_pgmagick_api.py
+    - /usr/bin/python test_pgmagick_blob.py
+    - /usr/bin/python test_pgmagick_color.py
+    - /usr/bin/python test_pgmagick_geometry.py
+    - /usr/bin/python test_pgmagick_image.py
+    - /usr/bin/python test_pgmagick_imagelist.py
+    - /usr/bin/python test_pgmagick_libinfo.py
+    - /usr/bin/python test_pgmagick_montage.py
