--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ language: python
 python:
     - "2.7"
     - "3.2" # for ubuntu12.04
+    - "3.4" # for ubuntu14.04
 
 before_install:
     - sudo apt-get update -qq
