--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,10 @@ language: python
 python:
     - "2.7"
     - "3.2" # for ubuntu12.04
-    - "3.4" # for ubuntu14.04
+
+matrix:
+    allow_failures:
+        - python: "3.2"
 
 before_install:
     - sudo apt-get update -qq
