--- a/test/Makefile
+++ b/test/Makefile
@@ -1,25 +1,27 @@
 all: cookbook blob color image geometry montage api
 
+PYTHON?=python
+
 cookbook:
-	python test_cookbook.py
+	@${PYTHON} test_cookbook.py
 
 blob:
-	python test_pgmagick_blob.py
+	@${PYTHON} test_pgmagick_blob.py
 
 color:
-	python test_pgmagick_color.py
+	@${PYTHON} test_pgmagick_color.py
 
 image:
-	python test_pgmagick_image.py
+	@${PYTHON} test_pgmagick_image.py
 
 geometry:
-	python test_pgmagick_geometry.py
+	@${PYTHON} test_pgmagick_geometry.py
 
 montage:
-	python test_pgmagick_montage.py
+	@${PYTHON} test_pgmagick_montage.py
 
 api:
-	python test_pgmagick_api.py
+	@${PYTHON} test_pgmagick_api.py
 
 clean:
 	rm *.png *.jpg
