--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ python:
     - "2.7"
     - "3.2" # for ubuntu12.04
     - "3.4"
+    - "3.6"
 
 matrix:
     allow_failures:
@@ -21,7 +22,8 @@ addons:
 
 install:
     - if [[ "$TRAVIS_PYTHON_VERSION" == "2."* ]]; then sudo /usr/bin/python setup.py install; fi
-    - if [[ "$TRAVIS_PYTHON_VERSION" == "3."* ]]; then sudo mkdir -p /usr/lib/python3.4/site-packages/ ; sudo /usr/bin/python3 setup.py install; fi
+    - if [[ "$TRAVIS_PYTHON_VERSION" == "3.4"* ]]; then sudo mkdir -p /usr/lib/python3.4/site-packages/ ; sudo /usr/bin/python3 setup.py install; fi
+    - if [[ "$TRAVIS_PYTHON_VERSION" == "3.6"* ]]; then sudo mkdir -p /usr/lib/python3.6/site-packages/ ; sudo /usr/bin/python3 setup.py install; fi
 
 script:
     - if [[ "$TRAVIS_PYTHON_VERSION" == "2."* ]]; then PYTHON=/usr/bin/python make test; fi
