--- a/.travis.yml
+++ b/.travis.yml
@@ -26,23 +26,24 @@ addons:
 before_install:
     - if [[ "$TARGET" == "macosx"* ]]; then
           brew update;
-          brew install boost-python --with-python3;
-          brew install graphicsmagick python python3;
-          brew outdated boost-python || brew upgrade boost-python --with-python3;
+          brew install boost-python boost-python3;
+          brew install graphicsmagick python python@2 python3;
+          brew outdated boost-python || brew upgrade boost-python;
+          brew outdated boost-python3 || brew upgrade boost-python3;
           brew outdated graphicsmagick || brew upgrade graphicsmagick;
-          brew outdated python || brew upgrade python;
+          brew outdated python@2 || brew upgrade python@2;
           brew outdated python3 || brew upgrade python3;
       fi
 
 install:
     - if [[ "$TRAVIS_PYTHON_VERSION" == "2."* ]]; then sudo /usr/bin/python setup.py install; fi
     - if [[ "$TRAVIS_PYTHON_VERSION" == "3."* ]]; then sudo mkdir -p /usr/lib/python3.4/site-packages/ ; sudo /usr/bin/python3 setup.py install; fi
-    - if [[ "$TARGET" == "macosx2" ]]; then python2 setup.py install; fi
+    - if [[ "$TARGET" == "macosx2" ]]; then python setup.py install; fi
     - if [[ "$TARGET" == "macosx3" ]]; then python3 setup.py install; fi
 
 script:
     - if [[ "$TRAVIS_PYTHON_VERSION" == "2."* ]]; then PYTHON=/usr/bin/python make test; fi
     - if [[ "$TRAVIS_PYTHON_VERSION" == "3."* ]]; then PYTHON=/usr/bin/python3 make test; fi
-    - if [[ "$TARGET" == "macosx2" ]]; then PYTHON=`which python2` make test; fi
+    - if [[ "$TARGET" == "macosx2" ]]; then PYTHON=`which python` make test; fi
     - if [[ "$TARGET" == "macosx3" ]]; then PYTHON=`which python3` make test; fi
     - ls setup.py
