--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ matrix:
         - python: "3.7"
           language: python
           env: TARGET=linux
-          dist: xenial
+          dist: xenial      # use python3.5
           sudo: required
     allow_failures:
         - python: "3.2"
@@ -42,7 +42,8 @@ before_install:
 
 install:
     - if [[ "$TRAVIS_PYTHON_VERSION" == "2."* ]]; then sudo /usr/bin/python setup.py install; fi
-    - if [[ "$TRAVIS_PYTHON_VERSION" == "3."* ]]; then sudo mkdir -p /usr/lib/python3.4/site-packages/ ; sudo /usr/bin/python3 setup.py install; fi
+    - if [[ "$TRAVIS_PYTHON_VERSION" == "3.4"* ]]; then sudo mkdir -p /usr/lib/python3.4/site-packages/ ; sudo /usr/bin/python3 setup.py install; fi
+    - if [[ "$TRAVIS_PYTHON_VERSION" == "3.5"* ]]; then sudo mkdir -p /usr/lib/python3.5/site-packages/ ; sudo /usr/bin/python3 setup.py install; fi
     - if [[ "$TARGET" == "macosx2" ]]; then python setup.py install; fi
     - if [[ "$TARGET" == "macosx3" ]]; then python3 setup.py install; fi
 
