--- a/.travis.yml
+++ b/.travis.yml
@@ -30,13 +30,13 @@ before_install:
           brew install boost-python graphicsmagick;
           brew outdated boost-python || brew upgrade boost-python;
           brew outdated graphicsmagick || brew upgrade graphicsmagick;
-          brew outdated python || brew upgrade python;
+          brew outdated python@2 || brew upgrade python@2;
       fi
     - if [[ "$TARGET" == "macosx3" ]]; then
-          brew install boost-python3 graphicsmagick;
+          brew install python@3.8 boost-python3 graphicsmagick;
           brew outdated boost-python3 || brew upgrade boost-python3;
           brew outdated graphicsmagick || brew upgrade graphicsmagick;
-          brew outdated python3 || brew upgrade python3;
+          brew outdated python@3.8 || brew upgrade python@3.8;
       fi
 
 install:
@@ -44,11 +44,11 @@ install:
     - if [[ "$TRAVIS_PYTHON_VERSION" == "3.4"* ]]; then sudo mkdir -p /usr/lib/python3.4/site-packages/ ; sudo /usr/bin/python3 setup.py install; fi
     - if [[ "$TRAVIS_PYTHON_VERSION" == "3.5"* ]]; then sudo mkdir -p /usr/lib/python3.5/site-packages/ ; sudo /usr/bin/python3 setup.py install; fi
     - if [[ "$TARGET" == "macosx2" ]]; then python setup.py install; fi
-    - if [[ "$TARGET" == "macosx3" ]]; then python3 setup.py install; fi
+    - if [[ "$TARGET" == "macosx3" ]]; then /usr/local/opt/python@3.8/bin/python3 setup.py install; fi
 
 script:
     - if [[ "$TRAVIS_PYTHON_VERSION" == "2."* ]]; then PYTHON=/usr/bin/python make test; fi
     - if [[ "$TRAVIS_PYTHON_VERSION" == "3."* ]]; then PYTHON=/usr/bin/python3 make test; fi
     - if [[ "$TARGET" == "macosx2" ]]; then PYTHON=`which python` make test; fi
-    - if [[ "$TARGET" == "macosx3" ]]; then PYTHON=`which python3` make test; fi
+    - if [[ "$TARGET" == "macosx3" ]]; then PYTHON=/usr/local/opt/python@3.8/bin/python3 make test; fi
     - ls setup.py
