--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -18,6 +18,10 @@ jobs:
         exclude:
           - os: macos-latest
             python-version: '3.7'
+          - os: macos-latest
+            python-version: '3.8'
+          - os: macos-latest
+            python-version: '3.9'
 
     steps:
     - uses: actions/checkout@v2
