--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -33,7 +33,7 @@ jobs:
       run: sudo apt-get install libboost-python-dev libgraphicsmagick++1-dev
       if: matrix.os == 'ubuntu-latest'
     - name: Install requirements on macOSX
-      run: HOMEBREW_NO_AUTO_UPDATE=1 brew install graphicsmagick boost-python3
+      run: HOMEBREW_NO_AUTO_UPDATE=1 brew install python@3.9 graphicsmagick boost-python3
       if: matrix.os == 'macOS-latest'
     - name: Install dependencies
       run: |
