--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -10,35 +10,18 @@ on:
 
 jobs:
   build:
-    runs-on: ${{ matrix.os }}
+    runs-on: ubuntu-latest
     strategy:
       matrix:
-        os: [macos-latest, ubuntu-latest]
         python-version: ['3.6', '3.7', '3.8', '3.9']
-        exclude:
-          - os: macos-latest
-            python-version: '3.7'
-          - os: macos-latest
-            python-version: '3.8'
-          - os: macos-latest
-            python-version: '3.9'
-
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
-      if: matrix.os == 'ubuntu-latest'
     - name: Install requirements on Linux
       run: sudo apt-get install libboost-python-dev libgraphicsmagick++1-dev
-      if: matrix.os == 'ubuntu-latest'
-    - name: Install requirements on macOSX
-      run: |
-        HOMEBREW_NO_AUTO_UPDATE=1 brew install python@3.9 graphicsmagick boost-python3
-        which python
-        which python3
-      if: matrix.os == 'macOS-latest'
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
