--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -21,7 +21,7 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
     - name: Install requirements on Linux
-      run: sudo apt-get install libboost-python-dev libgraphicsmagick++1-dev
+      run: sudo apt-get install g++ libboost-python-dev libgraphicsmagick++1-dev
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
