--- a/.github/workflows/python-macos.yml
+++ b/.github/workflows/python-macos.yml
@@ -20,6 +20,7 @@ jobs:
       run: |
         HOMEBREW_NO_AUTO_UPDATE=1 brew install python@3.10 graphicsmagick boost-python3
         HOMEBREW_NO_AUTO_UPDATE=1 brew link --overwrite python@3.10
+        HOMEBREW_NO_AUTO_UPDATE=1 brew link --overwrite boost-python3
     - name: Install dependencies
       run: |
         python3 -m pip install --upgrade pip
