--- a/.github/workflows/python-macos.yml
+++ b/.github/workflows/python-macos.yml
@@ -18,13 +18,15 @@ jobs:
     - uses: actions/checkout@v3
     - name: Install requirements on macOSX
       run: |
+        brew update
+        brew cleanup
         HOMEBREW_NO_AUTO_UPDATE=1 brew install python@3.11 graphicsmagick boost-python3
         HOMEBREW_NO_AUTO_UPDATE=1 brew link --overwrite python@3.11
         HOMEBREW_NO_AUTO_UPDATE=1 brew link --overwrite boost-python3
     - name: check env
       run: |
         uname -a
-        ls -a /opt/homebrew/bin/brew
+        ls -a /opt/
         ls -a /opt/local/bin/brew
     - name: Install dependencies
       run: |
