--- a/.github/workflows/python-macos.yml
+++ b/.github/workflows/python-macos.yml
@@ -18,9 +18,8 @@ jobs:
     - uses: actions/checkout@v3
     - name: Install requirements on macOSX
       run: |
-        HOMEBREW_NO_AUTO_UPDATE=1 brew uninstall --ignore-dependencies python@3.10
-        brew update
-        brew cleanup
+        brew update || true
+        brew cleanup || true
         HOMEBREW_NO_AUTO_UPDATE=1 brew install python@3.11 graphicsmagick boost-python3
         HOMEBREW_NO_AUTO_UPDATE=1 brew link --overwrite python@3.11
         HOMEBREW_NO_AUTO_UPDATE=1 brew link --overwrite boost-python3
