--- a/.github/workflows/python-macos.yml
+++ b/.github/workflows/python-macos.yml
@@ -29,6 +29,7 @@ jobs:
     - name: Install dependencies
       run: |
         ${PYTHON} -m pip install --upgrade pip
+        ${PYTHON} setup.py clean
         ${PYTHON} setup.py install
     - name: Test
       run: |
