--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -24,8 +24,8 @@ jobs:
       run: sudo apt-get update && sudo apt-get install g++ libboost-python-dev libgraphicsmagick++1-dev
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
-        python setup.py install
+        ${PYTHON} -m pip install --upgrade pip
+        ${PYTHON} -m pip install . -v
     - name: Test
       run: |
         make test
