--- a/.github/workflows/python-macos.yml
+++ b/.github/workflows/python-macos.yml
@@ -11,7 +11,10 @@ env:
 
 jobs:
   build:
-    runs-on: macos-12
+    strategy:
+      matrix:
+        os: [macos-13, macosx-14]
+      fail-fast: false
     steps:
     - uses: actions/checkout@v4
     - name: Install requirements on macOSX
