--- a/.github/workflows/python-macos.yml
+++ b/.github/workflows/python-macos.yml
@@ -15,6 +15,7 @@ jobs:
       matrix:
         os: [macos-13, macosx-14]
       fail-fast: false
+    runs-on: ${{ matrix.os }}
     steps:
     - uses: actions/checkout@v4
     - name: Install requirements on macOSX
