--- a/.github/workflows/python-macos.yml
+++ b/.github/workflows/python-macos.yml
@@ -21,8 +21,8 @@ jobs:
     - name: Install requirements on macOSX
       run: |
         brew cleanup
-        HOMEBREW_NO_AUTO_UPDATE=1 brew install python@3.11 graphicsmagick boost-python3
-        HOMEBREW_NO_AUTO_UPDATE=1 brew link --overwrite python@3.11
+        HOMEBREW_NO_AUTO_UPDATE=1 brew install python3 graphicsmagick boost-python3
+        HOMEBREW_NO_AUTO_UPDATE=1 brew link --overwrite python3
         HOMEBREW_NO_AUTO_UPDATE=1 brew link --overwrite boost-python3
     - name: check env
       run: |
