--- a/.github/workflows/python-macos.yml
+++ b/.github/workflows/python-macos.yml
@@ -13,7 +13,7 @@ jobs:
   build:
     strategy:
       matrix:
-        os: [macos-13, macosx-14]
+        os: [macos-13, macos-14]
       fail-fast: false
     runs-on: ${{ matrix.os }}
     steps:
