--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -19,11 +19,11 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
     - name: Install requirements on Linux
-      run: sudo apt-get update && sudo apt-get install g++ libboost-python-dev libgraphicsmagick++1-dev
+      run: sudo apt-get update && sudo apt-get install g++ libboost-python-dev libgraphicsmagick++1-dev fonts-urw-base35 gsfonts
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip setuptools
-        python setup.py install
+        python -m pip install --upgrade pip
+        pip install .
     - name: Test
       run: |
         make test
