--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ['3.10']
+        python-version: ['3.12']
     steps:
     - uses: actions/checkout@v6
     - name: Set up Python ${{ matrix.python-version }}
@@ -19,11 +19,11 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
     - name: Install requirements on Linux
-      run: sudo apt-get update && sudo apt-get install g++ libboost-python-dev libgraphicsmagick++1-dev
+      run: sudo apt-get update && sudo apt-get install g++ libboost-python-dev libgraphicsmagick++1-dev fonts-urw-base35 gsfonts
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        python setup.py install
+        pip install .
     - name: Test
       run: |
         make test
