--- a/.github/workflows/python-macos.yml
+++ b/.github/workflows/python-macos.yml
@@ -17,9 +17,7 @@ jobs:
     - name: Install requirements on macOSX
       run: |
         brew cleanup
-        HOMEBREW_NO_AUTO_UPDATE=1 brew install python@3.14 graphicsmagick boost-python3
-        HOMEBREW_NO_AUTO_UPDATE=1 brew link --overwrite python@3.14
-        HOMEBREW_NO_AUTO_UPDATE=1 brew link --overwrite boost-python3
+        HOMEBREW_NO_AUTO_UPDATE=1 brew install graphicsmagick boost-python3
     - name: check env
       run: |
         uname -a
